// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesReducers should handle all defined error types: rejected types GET_ACCOUNT 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types GET_ACCOUNT_IMAGES 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types UPDATE_ACCOUNT_IMAGE 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types GET_ACCOUNT 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {
        "images": Array [
          "success",
        ],
      },
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types GET_ACCOUNT_IMAGES 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "images": Array [
        "success",
      ],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types UPDATE_ACCOUNT_IMAGE 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types GET_ACCOUNT 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": true,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "GET_ACCOUNT_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types GET_ACCOUNT_IMAGES 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": true,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types UPDATE_ACCOUNT_IMAGE 1`] = `
Object {
  "result": Object {
    "account": Object {
      "data": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_PENDING",
}
`;
